# pytest-aiomoto

./: .gitignore  .readthedocs.yml  .versionner.rc  CHANGELOG.md  Makefile  README.md  mkdocs.yml  pyproject.toml  pytest.ini  tasks.py
.github/workflows/: python-publish.yml  python-test.yml
docs/: aiomoto_fixtures.md  index.md  moto_fixtures.md  requirements.txt
pytest_aiomoto/: __init__.py  aiomoto_batch.py  aiomoto_fixtures.py  aiomoto_lambda.py  aiomoto_s3.py  aiomoto_s3fs.py  aiomoto_services.py  aws_batch.py  aws_batch_models.py  aws_clients.py  aws_cognito.py  aws_credentials.py  aws_fixtures.py  aws_host.py  aws_lambda.py  aws_regions.py  aws_s3.py  moto_service_utils.py  moto_services.py  plugin.py  pytest_aiomoto.py  s3_event.json  s3_object.py  utils.py  version.py
tests/: conftest.py  test_aio_aws_batch.py  test_aio_aws_lambda.py  test_aio_aws_s3.py  test_aio_s3fs.py  test_aiomoto_clients.py  test_aiomoto_cookiecutter.py  test_aiomoto_service.py  test_aws_batch.py  test_aws_clients.py  test_aws_credentials.py  test_aws_fixtures.py  test_aws_lambda.py  test_aws_s3.py  test_pytest_aiomoto.py
