[tool.poetry]
name = "pytest-aiomoto"
version = "0.3.1"
description = "pytest-aiomoto"
authors = [
    "Darren Weber <dazza-codes@github.com>",
]
license = "Apache-2.0"

readme = "README.md"
repository = "https://github.com/dazza-codes/pytest-aiomoto.git"
homepage = "https://github.com/dazza-codes/pytest-aiomoto"

keywords = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
]

include = ["pytest_aiomoto/**/*"]
exclude = ["tests/**/*"]

packages = [
    {include = "pytest_aiomoto"}
]


[tool.poetry.plugins]
[tool.poetry.plugins."pytest11"]
"aiomoto" = "pytest_aiomoto.plugin"


[tool.poetry.dependencies]
python = ">=3.7.1,<4.0.0"

pytest = "^6.2.5"
pytest-asyncio = "^0.14.0"

# Allow updates to the latest aiobotocore and moto
aiobotocore = {version = "^2.0.0", extras = ["boto3"]}
moto = {version = "^3.0.0", extras = ["all","server"]}

aiofiles = {version = ">=0.7.0"}
requests = "^2.23.0"

s3fs = {version = ">=0.5.0", optional = true}

mkdocs = {version = "^1.2.3", optional = true }
mkdocs-material = {version = "^8.0.1", optional = true }
mkdocstrings = {version = "^0.16.2", optional = true }


[tool.poetry.extras]

docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings",
]

s3fs = ["s3fs"]

[tool.poetry.dev-dependencies]

# py-dev-deps is used as a common denominator for many
# development dependencies
py-dev-deps = "^0.3.1"

# Add dev dependencies for testing projects with the
# fixtures available from this project
pandas = "^1.0.0"
zarr = "^2.0.0"
xarray = "^0.20.2"


[tool.isort]
profile = "black"
force_single_line = true


[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
