[tool.poetry]
name = "pytest-aiomoto"
version = "0.7.1"
description = "pytest-aiomoto"
authors = [
    "Darren Weber <dazza-codes@github.com>",
]
license = "Apache-2.0"

readme = "README.md"
repository = "https://github.com/dazza-codes/pytest-aiomoto.git"
homepage = "https://github.com/dazza-codes/pytest-aiomoto"

keywords = [
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development :: Testing",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
]

include = ["pytest_aiomoto/**/*"]
exclude = ["tests/**/*"]

packages = [
    {include = "pytest_aiomoto"}
]


[tool.poetry.plugins]
[tool.poetry.plugins."pytest11"]
"aiomoto" = "pytest_aiomoto.plugin"


[tool.poetry.dependencies]
python = "^3.8"

pytest = "^7.0"
pytest-asyncio = "^0.21"

# Allow updates to the latest s3fs/aiobotocore and moto
# Allow s3fs/aiobotcore to bundle compatible versions of botocore, boto3, and awscli;
# see https://github.com/fsspec/s3fs/blob/main/setup.py
s3fs = {version = "^2023.0", extras = ["awscli", "boto3"], optional = true }
moto = {version = "^4.0", extras = ["all","server"]}

aiofiles = "^22.0"
requests = "^2.0"

mkdocs = {version = "^1.3", optional = true }
mkdocs-material = {version = "^8.0", optional = true }
mkdocstrings = {version = "^0.19.0", extras = ["python"], optional = true }


[tool.poetry.extras]

docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings",
]

s3fs = ["s3fs"]


[tool.poetry.group.dev.dependencies]

# py-dev-deps is used as a common denominator for many development dependencies
py-dev-deps = "^0.5"

# Add dev dependencies for testing projects with the
# fixtures available from this project; see
# tests/test_aio_s3fs.py
pandas = "^1.0"
zarr = "^2.0"
xarray = "^2023.0"


[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
